crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__week__single__specifier_fri.snap
---
source: crates/tools/cron/src/tests/unit/week.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Nom(
                    "FRI",
                    Tag,
                ),
                Nom(
                    "FRI",
                    Alt,
                ),
                Nom(
                    "FRI",
                    Alt,
                ),
                Nom(
                    "FRI",
                    Alt,
                ),
            ],
        },
    ),
)
