crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__week__single__specifier_mon.snap
---
source: crates/tools/cron/src/tests/unit/week.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Nom(
                    "MON",
                    Tag,
                ),
                Nom(
                    "MON",
                    Alt,
                ),
                Nom(
                    "MON",
                    Alt,
                ),
                Nom(
                    "MON",
                    Alt,
                ),
            ],
        },
    ),
)
