crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__week__single__specifier_named_periodic.snap
---
source: crates/tools/cron/src/tests/unit/week.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Nom(
                    "SUN/2",
                    Tag,
                ),
                Nom(
                    "SUN/2",
                    Alt,
                ),
                Nom(
                    "SUN/2",
                    Alt,
                ),
                Nom(
                    "SUN/2",
                    Alt,
                ),
            ],
        },
    ),
)
