crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__week__single__specifier_sat.snap
---
source: crates/tools/cron/src/tests/unit/week.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Nom(
                    "SAT",
                    Tag,
                ),
                Nom(
                    "SAT",
                    Alt,
                ),
                Nom(
                    "SAT",
                    Alt,
                ),
                Nom(
                    "SAT",
                    Alt,
                ),
            ],
        },
    ),
)
