crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__week__single__specifier_sun.snap
---
source: crates/tools/cron/src/tests/unit/week.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Nom(
                    "SUN",
                    Tag,
                ),
                Nom(
                    "SUN",
                    Alt,
                ),
                Nom(
                    "SUN",
                    Alt,
                ),
                Nom(
                    "SUN",
                    Alt,
                ),
            ],
        },
    ),
)
