crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__week__single__specifier_thu.snap
---
source: crates/tools/cron/src/tests/unit/week.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Nom(
                    "THU",
                    Tag,
                ),
                Nom(
                    "THU",
                    Alt,
                ),
                Nom(
                    "THU",
                    Alt,
                ),
                Nom(
                    "THU",
                    Alt,
                ),
            ],
        },
    ),
)
