crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__week__single__specifier_tue.snap
---
source: crates/tools/cron/src/tests/unit/week.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Nom(
                    "TUE",
                    Tag,
                ),
                Nom(
                    "TUE",
                    Alt,
                ),
                Nom(
                    "TUE",
                    Alt,
                ),
                Nom(
                    "TUE",
                    Alt,
                ),
            ],
        },
    ),
)
