crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__week__single__specifier_wed.snap
---
source: crates/tools/cron/src/tests/unit/week.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Nom(
                    "WED",
                    Tag,
                ),
                Nom(
                    "WED",
                    Alt,
                ),
                Nom(
                    "WED",
                    Alt,
                ),
                Nom(
                    "WED",
                    Alt,
                ),
            ],
        },
    ),
)
